v0.11.2/_sources/index.rst.txt
.. Packaging Scientific Python documentation master file, created by
   sphinx-quickstart on Thu Jun 28 12:35:56 2018.
   You can adapt this file completely to your liking, but it should at least
   contain the root `toctree` directive.

SFRmaker
==================
version |version|

|Go to the GitHub site|_

.. |Go to the GitHub site| replace:: **Go to the GitHub site**
.. _Go to the GitHub site: https://github.com/DOI-USGS/sfrmaker

|Read the paper|_

.. |Read the paper| replace:: **Read the paper**
.. _Read the paper: https://ngwa.onlinelibrary.wiley.com/doi/full/10.1111/gwat.13095


.. raw:: html

   <hr>

.. toctree::
   :maxdepth: 0
   :caption: Getting Started

    Philosophy <philosophy>
    Examples <examples>
    Installation <installation>

.. toctree::
  :maxdepth: 2
  :caption: User Guide

   Input Requirements <inputs>
   Using SFRmaker with a configuration file <examples>
   Basic Usage in a scripting context <notebooks/SFRmaker_demo>
   Preprocessing NHDPlus version 2 data <notebooks/preprocessing_demo>
   Using SFRmaker with NHDPlus High Resolution <notebooks/lines_from_NHDPlusHR_demo>
   Concepts and methods <concepts.rst>
   Stand-alone tools <notebooks/sfrmaker_tools>
   Troubleshooting <troubleshooting>

.. toctree::
  :maxdepth: 1
  :caption: Reference

   Code reference <api/index>
   Summary of configuration file options <config-summary>
   Release History <release-history>
   Contributing to SFRmaker <contributing>

.. toctree::
  :maxdepth: 1
  :caption: Bibliography

   References cited <references>
